objects/HealthCloudGA__CustomFieldSets__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HealthCloudGA__ExcludedFields__c</fullName>
        <label>Excluded Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FieldSetLabel__c</fullName>
        <label>Field Set Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SObjectName__c</fullName>
        <label>SObject Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TwoColumnLayout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Two Column Layout</label>
        <type>Checkbox</type>
    </fields>
    <label>Custom Field Sets</label>
</CustomObject>